# otus-python-developer

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  pyproject.toml
homework_03/MyApp/: app.py  view.py
homework_04/: alembic.ini  config.py  docker-compose.yml  jsonplaceholder_requests.py  main.py  pyproject.toml  requirements.txt
homework_04/alembic/: env.py
homework_04/alembic/versions/: 2024_05_12_0043-43b5158f2fa7_create_users_table.py  2024_05_12_0049-75fb12dac519_create_posts_table.py
homework_04/configs/: config.py
homework_04/models/: __init__.py  base.py  db.py  post.py  user.py
homework_05/: app.py  pyproject.toml  requirements-dev.txt
homework_05/static/: style.css
homework_05/templates/: about.html  base.html  index.html
testing/test_homework_03/: test_app.py
