[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiohttp = "^3.9.5"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
faker = "^24.11.0"
docker = "^7.0.0"
black = "^24.4.2"

